# kempnerpulse

./: .gitignore  CHANGELOG.md  README.md  kempner_pulse.py  kempnerpulse-on-cnode.sh  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: Makefile  architecture.md  conf.py  contributing.md  export.md  index.md  schema.md
docs/_static/: custom.css
docs/_templates/autosummary/: module.rst
docs/api/: index.md
docs/getting-started/: install.md  quickstart.md  views.md
docs/guide/: backends.md  cli.md  running-on-slurm.md
scripts/: kempnerpulse-on-cnode.sh
src/: kempner_pulse.py
src/kempnerpulse/: __init__.py  __main__.py  _v100_single_file.py  config.py  identification.py  lifecycle.py  selection.py  system_queries.py
src/kempnerpulse/_compat/: __init__.py  raw_to_sample.py
src/kempnerpulse/compute/: __init__.py  classify.py  health.py  pipeline.py  presets.py  real_util.py  result.py  thresholds.py
src/kempnerpulse/present/: __init__.py  controller.py  csv_writer.py  format.py  history.py  tui.py  widgets.py
src/kempnerpulse/reader/: __init__.py  base.py  dcgmi.py  preflight.py  prometheus.py  replay.py
src/kempnerpulse/translate/: __init__.py  context.py  mapping.py  schema.py  translator.py
tests/: conftest.py  test_status_labels.py
tests/fixtures/: dcgmi_dmon_2tick.txt  prometheus_sample.txt
tests/integration/: test_pipeline.py
tests/unit/: test_backend_contract.py  test_canonical_schema.py  test_compute.py  test_config.py  test_dcgmi_reader.py  test_present.py  test_prometheus_reader.py  test_replay_backend.py  test_round_trip.py  test_selection.py  test_translator.py
